@@ -1,6 +1,6 @@
 lib_LIBRARIES = libopt.a
 libopt_a_SOURCES = options.c options.h
-AM_CFLAGS = -Wall -Werror
+AM_CFLAGS = -Wall
 INCLUDES = -I$(top_srcdir)/src/libstruct \
 	-I$(top_srcdir)/src/libmhandle
 
